# PDFTableExtractor

./: .replit  README.md  agentic_processor.py  agentic_processor_simple.py  agentic_processor_streaming.py  app.py  chunking_processor.py  coverage_explanation.md  crew_storage_utils.py  deduplication_utils.py  export_utils.py  financial_ontology.py  gemini_processor.py  gemini_simple_processor.py  llm_processor.py  llm_structured_extractor.py  merge_normalize_qa.py  pdf_processor.py  pyproject.toml  replit.md  schema.json  schema_validator.py  storage_manager.py  structured_llm_processor.py  test_output.json  test_schema.py  textract_processor.py
attached_assets/: extracted_data (2)_1750419959949.csv  textract_output_1750153891672.json
output/: canonical_8acb0901-11bd-41b4-863e-3e6c8bc22b97.json  canonical_dbe91fea-d0ac-4a65-b602-8aed44dee713.json  extraction_5dd2dc7a-9517-42cc-8593-0653eb376849.json  extraction_8acb0901-11bd-41b4-863e-3e6c8bc22b97.json  extraction_dbe91fea-d0ac-4a65-b602-8aed44dee713.json  payload_5dd2dc7a-9517-42cc-8593-0653eb376849.json  payload_8acb0901-11bd-41b4-863e-3e6c8bc22b97.json  payload_dbe91fea-d0ac-4a65-b602-8aed44dee713.json  qa_results_5dd2dc7a-9517-42cc-8593-0653eb376849.json  qa_results_8acb0901-11bd-41b4-863e-3e6c8bc22b97.json  qa_results_dbe91fea-d0ac-4a65-b602-8aed44dee713.json  test_extraction_results.json  test_merge_qa_results.json  test_payload.json
static/: script.js  style.css
storage/: 20250606_055432_608970aa.json  20250606_055432_608970aa_results_055552.json  20250606_055949_b7afb6b8.json  20250606_115159_20779b4d.json
(+1 files in other folders)
