[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.3.24",
    "langchain>=0.3.25",
    "openai>=1.79.0",
    "pandas>=2.2.3",
    "pypdf2>=3.0.1",
    "reportlab>=4.4.1",
    "streamlit>=1.45.1",
    "flask>=3.1.1",
    "pdfplumber>=0.11.6",
]
