[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.3.24",
    "langchain>=0.3.25",
    "openai>=1.79.0",
    "pandas>=2.2.3",
    "pypdf2>=3.0.1",
    "reportlab>=4.4.1",
    "streamlit>=1.45.1",
    "flask>=3.1.1",
    "pdfplumber>=0.11.6",
    "llama-cloud-services>=0.6.23",
    "crewai>=0.118.0",
    "crewai-tools>=0.44.0",
    "boto3>=1.38.31",
    "pillow>=11.2.1",
    "pymupdf>=1.26.0",
    "pdf2image>=1.17.0",
    "aiohttp>=3.11.18",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.27.1",
]
